# SeaSketch

./: .gitignore  AGENT.md  AGENTS.md  README.md  package-lock.json  package.json  vitest.config.ts
doc/: design.md
src/: App.css  App.tsx  samples.test.ts  samples.ts  store.test.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib_test.rs  oauth.rs
src/ai/: gemini.test.ts  gemini.ts  openai.test.ts  openai.ts
src/components/: ChatPane.css  ChatPane.tsx  CodeEditor.css  CodeEditor.test.tsx  CodeEditor.tsx  Dropdown.css  Dropdown.tsx  EditorPane.css  EditorPane.tsx  PreviewPane.css  PreviewPane.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.css  Sidebar.tsx
src/hooks/: useDebouncedValue.test.ts  useDebouncedValue.ts
src/test/: setup.ts
src/utils/: debounce.test.ts  debounce.ts  filename.test.ts  filename.ts  frontmatter.test.ts  frontmatter.ts
